--- a/Sunduk.PWA/Components/ChamferComponent.razor
+++ b/Sunduk.PWA/Components/ChamferComponent.razor
@@ -32,7 +32,7 @@
         @if (ChamferDiameter > 0 && Angle > 0 && ChamferSize > 0)
         {
             <MudItem xs="12">
-                <MudField Variant="Variant.Outlined">
+                <MudField Variant="Variant.Filled">
                     <MudText>@ResultMessage</MudText>
                 </MudField>
             </MudItem>
