--- a/Sunduk.PWA/Components/DrillAngleComponent.razor
+++ b/Sunduk.PWA/Components/DrillAngleComponent.razor
@@ -11,7 +11,7 @@
         @if (DrillDiameter > 0 && DrillAngle > 0 && DrillAngle < 180)
         {
             <MudItem xs="12">
-                <MudField Variant="Variant.Outlined">
+                <MudField Variant="Variant.Filled">
                     <MudText>@ResultMessage</MudText>
                 </MudField>
             </MudItem>
