--- a/Sunduk.PWA/Components/RadiusComponent.razor
+++ b/Sunduk.PWA/Components/RadiusComponent.razor
@@ -29,7 +29,7 @@
         @if (RadiusDiameter > 0 && RadiusSize > 0)
         {
             <MudItem xs="12">
-                <MudField Variant="Variant.Outlined">
+                <MudField Variant="Variant.Filled">
                     <MudText>@ResultMessage</MudText>
                 </MudField>
             </MudItem>
