дизайн таблицы инструмента, конец программы в сундукаме, подтверждение перед сохранением

--- a/Sunduk.PWA/Dialogs/ChangelogDialog.razor
+++ b/Sunduk.PWA/Dialogs/ChangelogDialog.razor
@@ -31,7 +31,8 @@
         </div>
     </DialogContent>
     <DialogActions>
-        <MudIconButton Color="Color.Primary" Icon="@Icons.Material.Outlined.Done" OnClick="Submit"/>
+        <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Primary" Link="https://github.com/dece1ver/Sunduk"></MudIconButton>
+        <MudIconButton Color="Color.Primary" Icon="@Icons.Material.Outlined.Done" OnClick="Submit" />
     </DialogActions>
 </MudDialog>
 @code 
