--- a/Sunduk.PWA/Pages/ThreadInfoPage.razor
+++ b/Sunduk.PWA/Pages/ThreadInfoPage.razor
@@ -13,7 +13,7 @@
             <MudSelect Label="Стандарт" T="ThreadStandart" Value="ThreadStandart" Variant="Variant.Outlined" ValueChanged="OnStandartChanged">
                 <MudSelectItem Value="@(ThreadStandart.Metric)">60° Метрическая</MudSelectItem>
                 <MudSelectItem Value="@(ThreadStandart.BSPP)">55° Трубная цилиндрическая</MudSelectItem>
-                @*<MudSelectItem Value="@(Standart.BSPP)">30° Трапецеидальная</MudSelectItem>*@
+                <MudSelectItem Value="@(ThreadStandart.Trapeziodal)">30° Трапецеидальная</MudSelectItem>
             </MudSelect>
         </MudItem>
         <MudItem xs="12" md="6">
@@ -127,6 +127,10 @@
             {
                 return Thread.bsppTemplates;
             }
+            else if (ThreadStandart == ThreadStandart.Trapeziodal)
+            {
+                return Thread.trapezoidalTemplates;
+            }
             else
             {
                 return new HashSet<string> { };
@@ -157,6 +161,10 @@
             else if (ThreadStandart == ThreadStandart.BSPP)
             {
                 return "TPI";
+            }
+            else if (ThreadStandart == ThreadStandart.Trapeziodal)
+            {
+                return "мм";
             }
             else
             {
@@ -228,6 +236,12 @@
         else if(ThreadStandart == ThreadStandart.BSPP)
         {
             Thread.GetBSPPValues(CurrentThreadTemplate, out string diameter, out string pitch);
+            ThreadDiameterString = diameter;
+            ThreadPitchString = pitch;
+        }
+        else if (ThreadStandart == ThreadStandart.Trapeziodal)
+        {
+            Thread.GetTrapezoidalValues(CurrentThreadTemplate, out string diameter, out string pitch);
             ThreadDiameterString = diameter;
             ThreadPitchString = pitch;
         }
